--- a/src/styles.css
+++ b/src/styles.css
@@ -66,6 +66,8 @@ body {
   --card-shadow: 0 1.2rem 2rem rgba(0, 0, 0, 0.25);
   --footer-background-color: #333;
   --footer-text-color: #f8f9fa;
+  --footer-link-color: #ffd700;
+  --footer-link-color-hover: #ffae00;
   --modal-card-background-color: #099268;
 
   font-family: 'Roboto', sans-serif;
@@ -87,8 +89,10 @@ body.dark {
   --text-color: #f8f9fa;
   --card-shadow: 1rem 1.2rem 2rem rgba(255, 255, 255, 0.24);
   --card-background: linear-gradient(to left top, #364fc7, #1e3a8a);
-  --footer-background-color: #818181;
-  --footer-text-color: #333;
+  --footer-background-color: #bbbbbb;
+  --footer-text-color: rgb(19, 19, 19);
+  --footer-link-color: #ff1818;
+  --footer-link-color-hover: #ff4765;
   --modal-card-background-color: #107c6e;
 }
 
@@ -321,6 +325,7 @@ body.dark {
 
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .modal__setting {
@@ -396,7 +401,7 @@ body.dark {
 .footer--list__item > a:link,
 .footer--list__item > a:visited {
   text-decoration: none;
-  color: #ffd700;
+  color: var(--footer-link-color);
 
   transition: all 0.3s;
 }
@@ -404,7 +409,7 @@ body.dark {
 .footer--list__item > a:hover,
 .footer--list__item > a:active {
   text-decoration: none;
-  color: #ffae00;
+  color: var(--footer-link-color-hover);
 }
 
 /* ANIMATION */
